--- a/ios/FoodDeliveryApp.xcodeproj/xcshareddata/xcschemes/FoodDeliveryApp.xcscheme
+++ b/ios/FoodDeliveryApp.xcodeproj/xcshareddata/xcschemes/FoodDeliveryApp.xcscheme
@@ -44,6 +44,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "ko"
+      region = "KR"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -60,6 +62,13 @@
             ReferencedContainer = "container:FoodDeliveryApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = ""
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
