--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-config": "^1.4.11",
     "react-native-flipper": "^0.174.0",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
     "rn-async-storage-flipper": "^0.0.10"
   },
