네이버맵 패키지 설치

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -280,6 +280,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'com.naver.maps:map-sdk:3.14.0'
 }
 
 if (isNewArchitectureEnabled()) {
