--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+          android:name="com.naver.maps.map.CLIENT_ID"
+          android:value="gb353yv5g7"
+      />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
