--- a/ios/FoodDeliveryApp/Info.plist
+++ b/ios/FoodDeliveryApp/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NMFClientId</key>
+    <string>gb353yv5g7</string>
 </dict>
 </plist>
