--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^0.27.2",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-config": "^1.4.11",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-flipper": "^0.174.0",
+    "react-native-image-crop-picker": "^0.38.1",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-nmap": "^0.0.66",
     "react-native-permissions": "^3.6.1",
@@ -38,7 +41,6 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
-    "@types/node": "^18.11.9",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
