--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.22.19",
   "private": true,
   "scripts": {
+    "postinstall": "patch-package",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -23,7 +24,7 @@
     "react-native-config": "^1.4.11",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-flipper": "^0.174.0",
-    "react-native-image-crop-picker": "^0.38.1",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-resizer": "^1.4.5",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-nmap": "^0.0.66",
