--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
     "rn-async-storage-flipper": "^0.0.10",
