--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.70.5",
     "react-native-config": "^1.4.11",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-flipper": "^0.174.0",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-resizer": "^1.4.5",
