--- a/ios/FoodDeliveryApp/Info.plist
+++ b/ios/FoodDeliveryApp/Info.plist
@@ -65,5 +65,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>UIAppFonts</key>
+    <array>
+      <string>FontAwesome.ttf</string>
+      <string>FontAwesome5_Brands.ttf</string>
+      <string>FontAwesome5_Regular.ttf</string>
+      <string>FontAwesome5_Solid.ttf</string>
+    </array>
 </dict>
 </plist>
